# yapper

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  buffer.rs  config.rs  event.rs  filter.rs  hex.rs  highlight.rs  history.rs  input.rs  logging.rs  macros.rs  main.rs  mouse.rs  search.rs  theme.rs
src/serial/: auto_detect.rs  config.rs  connection.rs  detector.rs  mod.rs
src/ui/: filter_popup.rs  help.rs  input_bar.rs  macro_selector.rs  mod.rs  port_selector.rs  quicksend_bar.rs  settings.rs  status_bar.rs  terminal_view.rs
