[package]
name = "yapper"
version = "0.1.0"
edition = "2021"
description = "A modern, ergonomic UART serial TUI terminal for embedded workflows"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serialport = "4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
unicode-width = "0.2"
anyhow = "1"
regex = "1"
cli-clipboard = "0.4"
