[package]
name = "yapper"
version = "0.2.0"
edition = "2021"
description = "A modern, ergonomic UART serial TUI terminal for embedded workflows"
license = "MIT"
repository = "https://github.com/mkrapf/yapper"
homepage = "https://github.com/mkrapf/yapper"
keywords = ["serial", "uart", "tui", "terminal", "embedded"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serialport = "4"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
chrono = "0.4"
unicode-width = "0.2"
anyhow = "1"
regex = "1"
cli-clipboard = "0.4"
